@@ -1,3 +1,5 @@
+* Dialer: Check whether the agent is on break before deciding that it should
+  receive a scheduled call. Fixes Elastix bug #1497.
 * Login Logout: fix English translations for titles. Fixes Elastix bug #1491.
 * Agent Console: apparently a jQuery update now sends null variables in 
   javascript structs as empty strings instead of not-set variables in a 
